# PygameTemplate

./: MANIFEST.in  README.md  TheEntityEnvironmentModel  deploy_to_console.sh  pyproject.toml
configs/: settings.toml
configs/compositions/: editor_export.eei.json
game/: cli.py  main.py
game/compositions/: loader.py
game/configs/: input_tester_joystick.json
game/configs/compositions/: editor_export.eei.json
game/core/: app.py  audio.py  clock.py  core_model
game/editor/: model.py  registry.py
game/entities/: __init__.py  base.py  eye.py  mass.py  platforms.py  playable.py  sprite_collider.py  spyke_player.py  visible_mass.py
game/environments/: __init__.py  background.py  black_zone.py  force.py
game/input/: controller_profile.py
game/scenes/: __init__.py  base.py  editor.py  entity_editor.py  input_tester.py  main.py
