[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygame-videogame-maker"
authors = [{ name = "Diego Delgado Chaves", email = "diedelcha@gmail.com" }]
version = "1.0.5"
description = "Minimal Pygame scaffold (window + loop)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "black>=25.12.0",
  "pygame>=2.6.1",
  "rich>=13",
]

[project.scripts]
pygame-editor = "game.cli:main"

# ✅ En vez de packages=["game"], usa find para incluir subpaquetes
[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["game*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "__pycache__/*"]

# ⚠️ data-files: SOLO ficheros, NO directorios
[tool.setuptools.data-files]
"share/pygame-videogame-maker" = [
  # root files
  "README.md",
  "uv.lock",
  "PygameVideogameMaker.pygame",
  "TheEntityEnvironmentModel",
  "TheEntityEnvironmentModel.md",

  # configs (solo ficheros)
  "configs/**/*.toml",
  "configs/**/*.json",

  # assets (solo ficheros por extensión)
  "assets/**/*.png",
  "assets/**/*.jpg",
  "assets/**/*.jpeg",
  "assets/**/*.webp",
  "assets/**/*.wav",
  "assets/**/*.mp3",
  "assets/**/*.ogg",
  "assets/**/*.ttf",
  "assets/**/*.otf",

  # si tienes “archivos sin extensión” (como font_placeholder)
  "assets/**/font_placeholder",

  # scripts (solo ficheros)
  "scripts/**/*.py",
]
