[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PygameVideogameMaker"
version = "0.0.1"
description = "A simple videogame maker using Pygame."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["pygame", "game", "editor"]
license = { file = "LICENSE" }
authors = [
  { name = "Daiego", email = "daiego@email.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame==2.5.2",
    "rich==13.7.0",
    "tomli==2.0.1",
    "numpy==1.26.2",
]
include-package-data = true

[project.urls]
Homepage = "https://github.com/daiego/PygameVideogameMaker"
Issues = "https://github.com/daiego/PygameVideogameMaker/issues"

[project.scripts]
pygame-editor = "game.cli:run_editor"

# ✅ En vez de packages=["game"], usa find para incluir subpaquetes
[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["game*"]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "*.pyo", "__pycache__/*"]

# ⚠️ data-files: SOLO ficheros, NO directorios
[tool.setuptools.data-files]
"share/pygame-videogame-maker" = [
  # root files
  "README.md",
  "uv.lock",
  "PygameVideogameMaker.pygame",
  "TheEntityEnvironmentModel",
  "TheEntityEnvironmentModel.md",

  # configs (solo ficheros)
  "configs/**/*.toml",
  "configs/**/*.json",

  # assets (solo ficheros por extensión)
  "assets/**/*.png",
  "assets/**/*.jpg",
  "assets/**/*.jpeg",
  "assets/**/*.webp",
  "assets/**/*.wav",
  "assets/**/*.mp3",
  "assets/**/*.ogg",
  "assets/**/*.ttf",
  "assets/**/*.otf",

  # si tienes “archivos sin extensión” (como font_placeholder)
  "assets/**/font_placeholder",

  # scripts (solo ficheros)
  "scripts/**/*.py",
]
